add the mobile bottom nav

--- a/src/locales/am.json
+++ b/src/locales/am.json
@@ -45,8 +45,9 @@
     "pending": "በመጠባበቅ ላይ",
     "confirmed": "የተረጋገጠ",
     "cancelled": "የተሰረዘ",
-    "completed": "ተጠናቅቋል",
-    "waitlisted": "በተጠባባቂ ዝርዝር ውስጥ"
+    "waitlisted": "በተጠባባቂ ዝርዝር ውስጥ",
+    "dashboard": "ዳሽቦርድ",
+    "active": "ንቁ"
   },
   "payment": {
     "selectMethod": "የክፍያ ዘዴ ይምረጡ",
@@ -1446,79 +1447,85 @@
     }
   },
   "admin": {
-    "userManagement": {
-      "title": "የተጠቃሚ አስተዳደር",
-      "manageUsers": "ተጠቃሚዎችን አስተዳድር",
-      "searchUsers": "ተጠቃሚዎችን ፈልግ...",
-      "filterByRole": "በሚና ማጣሪያ",
-      "allRoles": "ሁሉም ሚናዎች",
-      "admin": "አስተዳዳሪ",
-      "staff": "ሰራተኛ",
-      "member": "አባል",
-      "visitor": "ጎብኚ",
-      "editUser": "ተጠቃሚ አርም",
-      "deleteUser": "ተጠቃሚ ሰርዝ",
-      "updateRole": "ሚና አዘምን",
-      "userUpdated": "ተጠቃሚ በተሳካ ሁኔታ ተዘምኗል",
-      "userDeleted": "ተጠቃሚ በተሳካ ሁኔታ ተሰርዟል",
-      "roleUpdated": "የተጠቃሚ ሚና በተሳካ ሁኔታ ተዘምኗል",
-      "failedToLoad": "ተጠቃሚዎችን ማምጣት አልተሳካም። የአስተዳዳሪ ፍቃድ እንዳለዎት ያረጋግጡ።",
-      "failedToUpdate": "ተጠቃሚን ማዘመን አልተሳካም",
-      "failedToDelete": "ተጠቃሚን ማስረዘም አልተሳካም",
-      "failedToUpdateRole": "ሚናን ማዘመን አልተሳካም",
-      "sureToDelete": "ይህንን ተጠቃሚ ማስረዘም እርግጠኛ ነዎት?",
-      "noUsersFound": "ምንም ተጠቃሚዎች አልተገኙም",
-      "name": "ስም",
-      "email": "ኢሜይል",
-      "role": "ሚና",
-      "phone": "ስልክ",
-      "actions": "ድርጊቶች"
-    },
-    "settings": {
-      "title": "የስርዓት ቅንብሮች",
-      "generalSettings": "አጠቃላይ ቅንብሮች",
-      "siteName": "የጣቢያ ስም",
-      "siteDescription": "የጣቢያ መግለጫ",
-      "siteUrl": "የጣቢያ URL",
-      "emailSettings": "የኢሜይል ቅንብሮች",
-      "emailBackend": "የኢሜይል የኋላ ክፍል",
-      "emailHost": "የኢሜይል አስተናጋጅ",
-      "emailPort": "የኢሜይል ወደብ",
-      "emailUseTLS": "TLS ይጠቀም",
-      "emailUser": "የኢሜይል ተጠቃሚ",
-      "emailFrom": "ኢሜይል ከ",
-      "systemSettings": "የስርዓት ቅንብሮች",
-      "timezone": "የጊዜ ቦታ",
-      "language": "ቋንቋ",
-      "dateFormat": "የቀን ቅርጸት",
-      "timeFormat": "የጊዜ ቅርጸት",
-      "securitySettings": "የደህንነት ቅንብሮች",
-      "sessionTimeout": "የክፍለ ጊዜ ማለቂያ (ደቂቃዎች)",
-      "passwordMinLength": "የይለፍ ቃል ዝቅተኛ ርዝመት",
-      "requireEmailVerification": "የኢሜይል ማረጋገጥ ይጠይቅ",
-      "allowRegistration": "ምዝገባ ይፍቀድ",
-      "notificationSettings": "የማሳወቂያ ቅንብሮች",
-      "enableEmailNotifications": "የኢሜይል ማሳወቂያዎችን አንቃ",
-      "enableSMSNotifications": "የSMS ማሳወቂያዎችን አንቃ",
-      "notifyOnNewUser": "በአዲስ ተጠቃሚ ላይ ማሳወቅ",
-      "notifyOnNewDonation": "በአዲስ ምጽዋት ላይ ማሳወቅ",
-      "jumuahSettings": "የጁሙአ ቅንብሮች",
-      "jumuahKhatibName": "የኸጢብ ስም",
-      "jumuahKhatibTitle": "የኸጢብ ርዕስ",
-      "jumuahKhatibPhoto": "የኸጢብ ፎቶ URL",
-      "dailyImamSettings": "የዕለታዊ ኢማም ቅንብሮች",
-      "dailyImamFajr": "የፈጅር ኢማም",
-      "dailyImamDhuhr": "የዙህር ኢማም",
-      "dailyImamAsr": "የአስር ኢማም",
-      "dailyImamMaghrib": "የመግሪብ ኢማም",
-      "dailyImamIsha": "የኢሻ ኢማም",
-      "saveSettings": "ቅንብሮችን አስቀምጥ",
-      "saving": "በመቀመጥ ላይ...",
-      "settingsSaved": "ቅንብሮች በተሳካ ሁኔታ ተቀምጠዋል",
-      "failedToSave": "ቅንብሮችን ማስቀመጥ አልተሳካም"
-    }
+    "actions": "ድርጊቶች"
+  },
+  "userManagement": {
+    "title": "የተጠቃሚ አስተዳደር",
+    "manageUsers": "ተጠቃሚዎችን አስተዳድር",
+    "manageUsersSubtitle": "በስርዓቱ ውስጥ ያሉትን ሁሉንም ተጠቃሚዎች ይፈልጉ፣ ያጣሩ እና ያስተዳድሩ።",
+    "searchUsers": "ተጠቃሚዎችን ፈልግ...",
+    "filterByRole": "በሚና ማጣሪያ",
+    "allRoles": "ሁሉም ሚናዎች",
+    "admin": "አስተዳዳሪ",
+    "staff": "ሰራተኛ",
+    "member": "አባል",
+    "visitor": "ጎብኚ",
+    "editUser": "ተጠቃሚ አርም",
+    "deleteUser": "ተጠቃሚ ሰርዝ",
+    "updateRole": "ሚና አዘምን",
+    "userUpdated": "ተጠቃሚ በተሳካ ሁኔታ ተዘምኗል",
+    "userDeleted": "ተጠቃሚ በተሳካ ሁኔታ ተሰርዟል",
+    "roleUpdated": "የተጠቃሚ ሚና በተሳካ ሁኔታ ተዘምኗል",
+    "failedToLoad": "ተጠቃሚዎችን ማምጣት አልተሳካም። የአስተዳዳሪ ፍቃድ እንዳለዎት ያረጋግጡ።",
+    "failedToUpdate": "ተጠቃሚን ማዘመን አልተሳካም",
+    "failedToDelete": "ተጠቃሚን ማስረዘም አልተሳካም",
+    "failedToUpdateRole": "ሚናን ማዘመን አልተሳካም",
+    "sureToDelete": "ይህንን ተጠቃሚ ማስረዘም እርግጠኛ ነዎት?",
+    "noUsersFound": "ምንም ተጠቃሚዎች አልተገኙም",
+    "name": "ስም",
+    "email": "ኢሜይል",
+    "role": "ሚና",
+    "phone": "ስልክ",
+    "actions": "ድርጊቶች"
+  },
+  "settings": {
+    "title": "የስርዓት ቅንብሮች",
+    "systemSettings": "የስርዓት ቅንብሮች",
+    "configureSubtitle": "የስርዓት ቅንብሮችን፣ ደህንነትን እና የውስጥ መለኪያዎችን ያስተካክሉ።",
+    "generalSettings": "አጠቃላይ ቅንብሮች",
+    "siteName": "የጣቢያ ስም",
+    "siteDescription": "የጣቢያ መግለጫ",
+    "siteUrl": "የጣቢያ URL",
+    "emailSettings": "የኢሜይል ቅንብሮች",
+    "emailBackend": "የኢሜይል የኋላ ክፍል",
+    "emailHost": "የኢሜይል አስተናጋጅ",
+    "emailPort": "የኢሜይል ወደብ",
+    "emailUseTLS": "TLS ይጠቀም",
+    "emailUser": "የኢሜይል ተጠቃሚ",
+    "emailFrom": "ኢሜይል ከ",
+    "timezone": "የጊዜ ቦታ",
+    "language": "ቋንቋ",
+    "dateFormat": "የቀን ቅርጸት",
+    "timeFormat": "የጊዜ ቅርጸት",
+    "securitySettings": "የደህንነት ቅንብሮች",
+    "sessionTimeout": "የክፍለ ጊዜ ማለቂያ (ደቂቃዎች)",
+    "passwordMinLength": "የይለፍ ቃል ዝቅተኛ ርዝመት",
+    "requireEmailVerification": "የኢሜይል ማረጋገጥ ይጠይቅ",
+    "allowRegistration": "ምዝገባ ይፍቀድ",
+    "notificationSettings": "የማሳወቂያ ቅንብሮች",
+    "enableEmailNotifications": "የኢሜይል ማሳወቂያዎችን አንቃ",
+    "enableSMSNotifications": "የSMS ማሳወቂያዎችን አንቃ",
+    "notifyOnNewUser": "በአዲስ ተጠቃሚ ላይ ማሳወቅ",
+    "notifyOnNewDonation": "በአዲስ ምጽዋት ላይ ማሳወቅ",
+    "jumuahSettings": "የጁሙአ ቅንብሮች",
+    "jumuahKhatibName": "የኸጢብ ስም",
+    "jumuahKhatibTitle": "የኸጢብ ርዕስ",
+    "jumuahKhatibPhoto": "የኸጢብ ፎቶ URL",
+    "dailyImamSettings": "የዕለታዊ ኢማም ቅንብሮች",
+    "dailyImamFajr": "የፈጅር ኢማም",
+    "dailyImamDhuhr": "የዙህር ኢማም",
+    "dailyImamAsr": "የአስር ኢማም",
+    "dailyImamMaghrib": "የመግሪብ ኢማም",
+    "dailyImamIsha": "የኢሻ ኢማም",
+    "saveSettings": "ቅንብሮችን አስቀምጥ",
+    "saveAll": "ሁሉንም ለውጦች አስቀምጥ",
+    "saving": "በመቀመጥ ላይ...",
+    "settingsSaved": "ቅንብሮች በተሳካ ሁኔታ ተቀምጠዋል",
+    "failedToSave": "ቅንብሮችን ማስቀመጥ አልተሳካም"
   },
   "staff": {
+    "title": "የሰራተኛ አስተዳደር",
+    "manageStaffSubtitle": "የመስጊድ ሰራተኞችን ያስተዳድሩ፣ ሚናዎችን ይመድቡ እና አፈፃፀምን ይከታተሉ።",
     "tasks": {
       "title": "የተግባር አስተዳደር",
       "manageAssignReview": "ሰራተኞችን ተግባሮችን አስተዳድር፣ ይመድቡ እና ይገምግሙ።",
