--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -45,8 +45,9 @@
     "pending": "قيد الانتظار",
     "confirmed": "تم التأكيد",
     "cancelled": "تم الإلغاء",
-    "completed": "مكتمل",
-    "waitlisted": "في قائمة الانتظار"
+    "waitlisted": "في قائمة الانتظار",
+    "dashboard": "لوحة التحكم",
+    "active": "نشط"
   },
   "payment": {
     "selectMethod": "اختر طريقة الدفع",
@@ -1452,79 +1453,85 @@
     }
   },
   "admin": {
-    "userManagement": {
-      "title": "إدارة المستخدمين",
-      "manageUsers": "إدارة المستخدمين",
-      "searchUsers": "البحث عن المستخدمين...",
-      "filterByRole": "تصفية حسب الدور",
-      "allRoles": "جميع الأدوار",
-      "admin": "المسؤول",
-      "staff": "الموظف",
-      "member": "العضو",
-      "visitor": "الزائر",
-      "editUser": "تعديل المستخدم",
-      "deleteUser": "حذف المستخدم",
-      "updateRole": "تحديث الدور",
-      "userUpdated": "تم تحديث المستخدم بنجاح",
-      "userDeleted": "تم حذف المستخدم بنجاح",
-      "roleUpdated": "تم تحديث دور المستخدم بنجاح",
-      "failedToLoad": "فشل تحميل المستخدمين. تأكد من أن لديك أذونات المسؤول.",
-      "failedToUpdate": "فشل تحديث المستخدم",
-      "failedToDelete": "فشل حذف المستخدم",
-      "failedToUpdateRole": "فشل تحديث الدور",
-      "sureToDelete": "هل أنت متأكد من حذف هذا المستخدم؟",
-      "noUsersFound": "لم يتم العثور على مستخدمين",
-      "name": "الاسم",
-      "email": "البريد الإلكتروني",
-      "role": "الدور",
-      "phone": "الهاتف",
-      "actions": "الإجراءات"
-    },
-    "settings": {
-      "title": "إعدادات النظام",
-      "generalSettings": "الإعدادات العامة",
-      "siteName": "اسم الموقع",
-      "siteDescription": "وصف الموقع",
-      "siteUrl": "رابط الموقع",
-      "emailSettings": "إعدادات البريد الإلكتروني",
-      "emailBackend": "خادم البريد الإلكتروني",
-      "emailHost": "مضيف البريد الإلكتروني",
-      "emailPort": "منفذ البريد الإلكتروني",
-      "emailUseTLS": "استخدام TLS",
-      "emailUser": "مستخدم البريد الإلكتروني",
-      "emailFrom": "البريد الإلكتروني من",
-      "systemSettings": "إعدادات النظام",
-      "timezone": "المنطقة الزمنية",
-      "language": "اللغة",
-      "dateFormat": "تنسيق التاريخ",
-      "timeFormat": "تنسيق الوقت",
-      "securitySettings": "إعدادات الأمان",
-      "sessionTimeout": "انتهاء الجلسة (بالدقائق)",
-      "passwordMinLength": "الحد الأدنى لطول كلمة المرور",
-      "requireEmailVerification": "يتطلب التحقق من البريد الإلكتروني",
-      "allowRegistration": "السماح بالتسجيل",
-      "notificationSettings": "إعدادات الإشعارات",
-      "enableEmailNotifications": "تفعيل إشعارات البريد الإلكتروني",
-      "enableSMSNotifications": "تفعيل إشعارات الرسائل النصية",
-      "notifyOnNewUser": "الإشعار عند مستخدم جديد",
-      "notifyOnNewDonation": "الإشعار عند تبرع جديد",
-      "jumuahSettings": "إعدادات الجمعة",
-      "jumuahKhatibName": "اسم الخطيب",
-      "jumuahKhatibTitle": "لقب الخطيب",
-      "jumuahKhatibPhoto": "رابط صورة الخطيب",
-      "dailyImamSettings": "إعدادات الإمام اليومي",
-      "dailyImamFajr": "إمام الفجر",
-      "dailyImamDhuhr": "إمام الظهر",
-      "dailyImamAsr": "إمام العصر",
-      "dailyImamMaghrib": "إمام المغرب",
-      "dailyImamIsha": "إمام العشاء",
-      "saveSettings": "حفظ الإعدادات",
-      "saving": "جاري الحفظ...",
-      "settingsSaved": "تم حفظ الإعدادات بنجاح",
-      "failedToSave": "فشل حفظ الإعدادات"
-    }
+    "actions": "الإجراءات"
+  },
+  "userManagement": {
+    "title": "إدارة المستخدمين",
+    "manageUsers": "إدارة المستخدمين",
+    "manageUsersSubtitle": "البحث والتصفية وإدارة أذونات جميع المستخدمين المسجلين في النظام.",
+    "searchUsers": "البحث عن المستخدمين...",
+    "filterByRole": "تصفية حسب الدور",
+    "allRoles": "جميع الأدوار",
+    "admin": "المسؤول",
+    "staff": "الموظف",
+    "member": "العضو",
+    "visitor": "الزائر",
+    "editUser": "تعديل المستخدم",
+    "deleteUser": "حذف المستخدم",
+    "updateRole": "تحديث الدور",
+    "userUpdated": "تم تحديث المستخدم بنجاح",
+    "userDeleted": "تم حذف المستخدم بنجاح",
+    "roleUpdated": "تم تحديث دور المستخدم بنجاح",
+    "failedToLoad": "فشل تحميل المستخدمين. تأكد من أن لديك أذونات المسؤول.",
+    "failedToUpdate": "فشل تحديث المستخدم",
+    "failedToDelete": "فشل حذف المستخدم",
+    "failedToUpdateRole": "فشل تحديث الدور",
+    "sureToDelete": "هل أنت متأكد من حذف هذا المستخدم؟",
+    "noUsersFound": "لم يتم العثور على مستخدمين",
+    "name": "الاسم",
+    "email": "البريد الإلكتروني",
+    "role": "الدور",
+    "phone": "الهاتف",
+    "actions": "الإجراءات"
+  },
+  "settings": {
+    "title": "إعدادات النظام",
+    "systemSettings": "إعدادات النظام",
+    "configureSubtitle": "ضبط تهيئات النظام والأمان والمعايير الخاصة بالمسجد.",
+    "generalSettings": "الإعدادات العامة",
+    "siteName": "اسم الموقع",
+    "siteDescription": "وصف الموقع",
+    "siteUrl": "رابط الموقع",
+    "emailSettings": "إعدادات البريد الإلكتروني",
+    "emailBackend": "خادم البريد الإلكتروني",
+    "emailHost": "مضيف البريد الإلكتروني",
+    "emailPort": "منفذ البريد الإلكتروني",
+    "emailUseTLS": "استخدام TLS",
+    "emailUser": "مستخدم البريد الإلكتروني",
+    "emailFrom": "البريد الإلكتروني من",
+    "timezone": "المنطقة الزمنية",
+    "language": "اللغة",
+    "dateFormat": "تنسيق التاريخ",
+    "timeFormat": "تنسيق الوقت",
+    "securitySettings": "إعدادات الأمان",
+    "sessionTimeout": "انتهاء الجلسة (بالدقائق)",
+    "passwordMinLength": "الحد الأدنى لطول كلمة المرور",
+    "requireEmailVerification": "يتطلب التحقق من البريد الإلكتروني",
+    "allowRegistration": "السماح بالتسجيل",
+    "notificationSettings": "إعدادات الإشعارات",
+    "enableEmailNotifications": "تفعيل إشعارات البريد الإلكتروني",
+    "enableSMSNotifications": "تفعيل إشعارات الرسائل النصية",
+    "notifyOnNewUser": "الإشعار عند مستخدم جديد",
+    "notifyOnNewDonation": "الإشعار عند تبرع جديد",
+    "jumuahSettings": "إعدادات الجمعة",
+    "jumuahKhatibName": "اسم الخطيب",
+    "jumuahKhatibTitle": "لقب الخطيب",
+    "jumuahKhatibPhoto": "رابط صورة الخطيب",
+    "dailyImamSettings": "إعدادات الإمام اليومي",
+    "dailyImamFajr": "إمام الفجر",
+    "dailyImamDhuhr": "إمام الظهر",
+    "dailyImamAsr": "إمام العصر",
+    "dailyImamMaghrib": "إمام المغرب",
+    "dailyImamIsha": "إمام العشاء",
+    "saveSettings": "حفظ الإعدادات",
+    "saveAll": "حفظ جميع التغييرات",
+    "saving": "جاري الحفظ...",
+    "settingsSaved": "تم حفظ الإعدادات بنجاح",
+    "failedToSave": "فشل حفظ الإعدادات"
   },
   "staff": {
+    "title": "إدارة الموظفين",
+    "manageStaffSubtitle": "إدارة موظفي المسجد وتعيين الأدوار وتتبع الأداء.",
     "tasks": {
       "title": "إدارة المهام",
       "manageAssignReview": "إدارة وتعيين ومراجعة مهام الموظفين.",
