--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -50,7 +50,10 @@
     "confirmed": "Confirmed",
     "cancelled": "Cancelled",
     "completed": "Completed",
-    "waitlisted": "Waitlisted"
+    "waitlisted": "Waitlisted",
+    "viewAll": "View All",
+    "dashboard": "Dashboard",
+    "active": "Active"
   },
   "payment": {
     "selectMethod": "Select Payment Method",
@@ -1432,79 +1435,85 @@
     }
   },
   "admin": {
-    "userManagement": {
-      "title": "User Management",
-      "manageUsers": "Manage Users",
-      "searchUsers": "Search users...",
-      "filterByRole": "Filter by Role",
-      "allRoles": "All Roles",
-      "admin": "Admin",
-      "staff": "Staff",
-      "member": "Member",
-      "visitor": "Visitor",
-      "editUser": "Edit User",
-      "deleteUser": "Delete User",
-      "updateRole": "Update Role",
-      "userUpdated": "User updated successfully",
-      "userDeleted": "User deleted successfully",
-      "roleUpdated": "User role updated successfully",
-      "failedToLoad": "Failed to load users. Make sure you have admin permissions.",
-      "failedToUpdate": "Failed to update user",
-      "failedToDelete": "Failed to delete user",
-      "failedToUpdateRole": "Failed to update role",
-      "sureToDelete": "Are you sure you want to delete this user?",
-      "noUsersFound": "No users found",
-      "name": "Name",
-      "email": "Email",
-      "role": "Role",
-      "phone": "Phone",
-      "actions": "Actions"
-    },
-    "settings": {
-      "title": "System Settings",
-      "generalSettings": "General Settings",
-      "siteName": "Site Name",
-      "siteDescription": "Site Description",
-      "siteUrl": "Site URL",
-      "emailSettings": "Email Settings",
-      "emailBackend": "Email Backend",
-      "emailHost": "Email Host",
-      "emailPort": "Email Port",
-      "emailUseTLS": "Use TLS",
-      "emailUser": "Email User",
-      "emailFrom": "Email From",
-      "systemSettings": "System Settings",
-      "timezone": "Timezone",
-      "language": "Language",
-      "dateFormat": "Date Format",
-      "timeFormat": "Time Format",
-      "securitySettings": "Security Settings",
-      "sessionTimeout": "Session Timeout (minutes)",
-      "passwordMinLength": "Password Minimum Length",
-      "requireEmailVerification": "Require Email Verification",
-      "allowRegistration": "Allow Registration",
-      "notificationSettings": "Notification Settings",
-      "enableEmailNotifications": "Enable Email Notifications",
-      "enableSMSNotifications": "Enable SMS Notifications",
-      "notifyOnNewUser": "Notify on New User",
-      "notifyOnNewDonation": "Notify on New Donation",
-      "jumuahSettings": "Jumuah Settings",
-      "jumuahKhatibName": "Khatib Name",
-      "jumuahKhatibTitle": "Khatib Title",
-      "jumuahKhatibPhoto": "Khatib Photo URL",
-      "dailyImamSettings": "Daily Imam Settings",
-      "dailyImamFajr": "Fajr Imam",
-      "dailyImamDhuhr": "Dhuhr Imam",
-      "dailyImamAsr": "Asr Imam",
-      "dailyImamMaghrib": "Maghrib Imam",
-      "dailyImamIsha": "Isha Imam",
-      "saveSettings": "Save Settings",
-      "saving": "Saving...",
-      "settingsSaved": "Settings saved successfully",
-      "failedToSave": "Failed to save settings"
-    }
+    "actions": "Actions"
+  },
+  "userManagement": {
+    "title": "User Management",
+    "manageUsers": "Manage Users",
+    "manageUsersSubtitle": "Search, filter, and manage permissions of all registered users in the system.",
+    "searchUsers": "Search users...",
+    "filterByRole": "Filter by Role",
+    "allRoles": "All Roles",
+    "admin": "Admin",
+    "staff": "Staff",
+    "member": "Member",
+    "visitor": "Visitor",
+    "editUser": "Edit User",
+    "deleteUser": "Delete User",
+    "updateRole": "Update Role",
+    "userUpdated": "User updated successfully",
+    "userDeleted": "User deleted successfully",
+    "roleUpdated": "User role updated successfully",
+    "failedToLoad": "Failed to load users. Make sure you have admin permissions.",
+    "failedToUpdate": "Failed to update user",
+    "failedToDelete": "Failed to delete user",
+    "failedToUpdateRole": "Failed to update role",
+    "sureToDelete": "Are you sure you want to delete this user?",
+    "noUsersFound": "No users found",
+    "name": "Name",
+    "email": "Email",
+    "role": "Role",
+    "phone": "Phone",
+    "actions": "Actions"
+  },
+  "settings": {
+    "title": "System Settings",
+    "systemSettings": "System Settings",
+    "configureSubtitle": "Adjust system-wide configurations, security, and mosque-specific parameters.",
+    "generalSettings": "General Settings",
+    "siteName": "Site Name",
+    "siteDescription": "Site Description",
+    "siteUrl": "Site URL",
+    "emailSettings": "Email Settings",
+    "emailBackend": "Email Backend",
+    "emailHost": "Email Host",
+    "emailPort": "Email Port",
+    "emailUseTLS": "Use TLS",
+    "emailUser": "Email User",
+    "emailFrom": "Email From",
+    "timezone": "Timezone",
+    "language": "Language",
+    "dateFormat": "Date Format",
+    "timeFormat": "Time Format",
+    "securitySettings": "Security Settings",
+    "sessionTimeout": "Session Timeout (minutes)",
+    "passwordMinLength": "Password Minimum Length",
+    "requireEmailVerification": "Require Email Verification",
+    "allowRegistration": "Allow Registration",
+    "notificationSettings": "Notification Settings",
+    "enableEmailNotifications": "Enable Email Notifications",
+    "enableSMSNotifications": "Enable SMS Notifications",
+    "notifyOnNewUser": "Notify on New User",
+    "notifyOnNewDonation": "Notify on New Donation",
+    "jumuahSettings": "Jumuah Settings",
+    "jumuahKhatibName": "Khatib Name",
+    "jumuahKhatibTitle": "Khatib Title",
+    "jumuahKhatibPhoto": "Khatib Photo URL",
+    "dailyImamSettings": "Daily Imam Settings",
+    "dailyImamFajr": "Fajr Imam",
+    "dailyImamDhuhr": "Dhuhr Imam",
+    "dailyImamAsr": "Asr Imam",
+    "dailyImamMaghrib": "Maghrib Imam",
+    "dailyImamIsha": "Isha Imam",
+    "saveSettings": "Save Settings",
+    "saveAll": "Save All Changes",
+    "saving": "Saving...",
+    "settingsSaved": "Settings saved successfully",
+    "failedToSave": "Failed to save settings"
   },
   "staff": {
+    "title": "Staff Management",
+    "manageStaffSubtitle": "Manage mosque staff, assign roles, and track performance.",
     "tasks": {
       "title": "Task Management",
       "manageAssignReview": "Manage, assign, and review staff tasks.",
