--- a/src/locales/am.json
+++ b/src/locales/am.json
@@ -47,7 +47,16 @@
     "cancelled": "የተሰረዘ",
     "waitlisted": "በተጠባባቂ ዝርዝር ውስጥ",
     "dashboard": "ዳሽቦርድ",
-    "active": "ንቁ"
+    "active": "ንቁ",
+    "admin": "አስተዳዳሪ",
+    "staff": "ሰራተኛ",
+    "member": "አባል",
+    "visitor": "ጎብኚ",
+    "teacher": "አስተማሪ",
+    "student": "ተማሪ",
+    "parent": "ወላጅ",
+    "you": "እርስዎ",
+    "saveChanges": "ለውጦችን አስቀምጥ"
   },
   "payment": {
     "selectMethod": "የክፍያ ዘዴ ይምረጡ",
@@ -1453,14 +1462,12 @@
     "title": "የተጠቃሚ አስተዳደር",
     "manageUsers": "ተጠቃሚዎችን አስተዳድር",
     "manageUsersSubtitle": "በስርዓቱ ውስጥ ያሉትን ሁሉንም ተጠቃሚዎች ይፈልጉ፣ ያጣሩ እና ያስተዳድሩ።",
-    "searchUsers": "ተጠቃሚዎችን ፈልግ...",
-    "filterByRole": "በሚና ማጣሪያ",
+    "searchPlaceholder": "በስም፣ በኢሜል ወይም በተጠቃሚ ስም ይፈልጉ...",
     "allRoles": "ሁሉም ሚናዎች",
-    "admin": "አስተዳዳሪ",
-    "staff": "ሰራተኛ",
-    "member": "አባል",
-    "visitor": "ጎብኚ",
     "editUser": "ተጠቃሚ አርም",
+    "editUserSubtitle": "የተጠቃሚውን መገለጫ እና ፈቃዶችን ያዘምኑ።",
+    "firstName": "መጀመሪያ ስም",
+    "lastName": "የአያት ስም",
     "deleteUser": "ተጠቃሚ ሰርዝ",
     "updateRole": "ሚና አዘምን",
     "userUpdated": "ተጠቃሚ በተሳካ ሁኔታ ተዘምኗል",
@@ -1472,7 +1479,7 @@
     "failedToUpdateRole": "ሚናን ማዘመን አልተሳካም",
     "sureToDelete": "ይህንን ተጠቃሚ ማስረዘም እርግጠኛ ነዎት?",
     "noUsersFound": "ምንም ተጠቃሚዎች አልተገኙም",
-    "name": "ስም",
+    "name": "መጀመሪያ ስም",
     "email": "ኢሜይል",
     "role": "ሚና",
     "phone": "ስልክ",
@@ -1530,7 +1537,35 @@
       "title": "የተግባር አስተዳደር",
       "manageAssignReview": "ሰራተኞችን ተግባሮችን አስተዳድር፣ ይመድቡ እና ይገምግሙ።",
       "viewUpdateTasks": "የተመደቡ ተግባሮችዎን ይመልከቱ እና ያዘምኑ።",
-      "loadingTasks": "ተግባሮች በመጫን ላይ..."
+      "loadingTasks": "ተግባሮች በመጫን ላይ...",
+      "assignNewTask": "አዲስ ተግባር መድብ",
+      "newTask": "አዲስ ተግባር",
+      "taskApproved": "ተግባር ጸድቋል",
+      "taskRejected": "ተግባር ውድቅ ተደርጓል",
+      "taskAssigned": "ተግባር በተሳካ ሁኔታ ተመድቧል",
+      "failedToApprove": "ተግባርን ማጽደቅ አልተሳካም",
+      "failedToReject": "ተግባርን ውድቅ ማድረግ አልተሳካም",
+      "failedToAssign": "ተግባርን መመደብ አልተሳካም",
+      "description": "የተግባር መግለጫ",
+      "assignTo": "መደብ ለ",
+      "dueDate": "የማለቂያ ቀን",
+      "priority": "ቅድሚያ",
+      "selectStaff": "ሰራተኛ ይምረጡ",
+      "assignTask": "ተግባር መድብ",
+      "assigning": "በመመደብ ላይ...",
+      "descriptionRequired": "የተግባር መግለጫ ያስፈልጋል",
+      "staffRequired": "እባክዎ የሰራተኛ አባል ይምረጡ",
+      "dueDateRequired": "የማለቂያ ቀን ያስፈልጋል",
+      "dueDatePast": "የማለቂያ ቀን ካለፈበት ጊዜ ሊሆን አይችልም",
+      "placeholder": "የተግባር መግለጫ ያስገቡ...",
+      "all": "ሁሉም",
+      "pending": "በመጠባበቅ ላይ",
+      "submitted": "የቀረበ",
+      "inProgress": "በሂደት ላይ",
+      "low": "አነስተኛ",
+      "medium": "መካከለኛ",
+      "high": "ከፍተኛ",
+      "urgent": "አስቸኳይ"
     },
     "attendance": {
       "title": "የመገኘት አስተዳደር",
