--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -47,7 +47,16 @@
     "cancelled": "تم الإلغاء",
     "waitlisted": "في قائمة الانتظار",
     "dashboard": "لوحة التحكم",
-    "active": "نشط"
+    "active": "نشط",
+    "admin": "المسؤول",
+    "staff": "الموظف",
+    "member": "العضو",
+    "visitor": "الزائر",
+    "teacher": "المعلم",
+    "student": "الطالب",
+    "parent": "ولي الأمر",
+    "you": "أنت",
+    "saveChanges": "حفظ التغييرات"
   },
   "payment": {
     "selectMethod": "اختر طريقة الدفع",
@@ -1459,14 +1468,13 @@
     "title": "إدارة المستخدمين",
     "manageUsers": "إدارة المستخدمين",
     "manageUsersSubtitle": "البحث والتصفية وإدارة أذونات جميع المستخدمين المسجلين في النظام.",
-    "searchUsers": "البحث عن المستخدمين...",
-    "filterByRole": "تصفية حسب الدور",
+    "searchPlaceholder": "البحث بالاسم أو البريد الإلكتروني أو اسم المستخدم...",
     "allRoles": "جميع الأدوار",
-    "admin": "المسؤول",
-    "staff": "الموظف",
-    "member": "العضو",
-    "visitor": "الزائر",
     "editUser": "تعديل المستخدم",
+    "editUserSubtitle": "تحديث ملف تعريف المستخدم والأذونات.",
+    "firstName": "الاسم الأول",
+    "lastName": "اسم العائلة",
+    "searchUsers": "البحث عن المستخدمين...",
     "deleteUser": "حذف المستخدم",
     "updateRole": "تحديث الدور",
     "userUpdated": "تم تحديث المستخدم بنجاح",
@@ -1478,7 +1486,7 @@
     "failedToUpdateRole": "فشل تحديث الدور",
     "sureToDelete": "هل أنت متأكد من حذف هذا المستخدم؟",
     "noUsersFound": "لم يتم العثور على مستخدمين",
-    "name": "الاسم",
+    "name": "الاسم الأول",
     "email": "البريد الإلكتروني",
     "role": "الدور",
     "phone": "الهاتف",
@@ -1536,7 +1544,35 @@
       "title": "إدارة المهام",
       "manageAssignReview": "إدارة وتعيين ومراجعة مهام الموظفين.",
       "viewUpdateTasks": "عرض وتحديث المهام المعينة لك.",
-      "loadingTasks": "جاري تحميل المهام..."
+      "loadingTasks": "جاري تحميل المهام...",
+      "assignNewTask": "إسناد مهمة جديدة",
+      "newTask": "مهمة جديدة",
+      "taskApproved": "تمت الموافقة على المهمة",
+      "taskRejected": "تم رفض المهمة",
+      "taskAssigned": "تم إسناد المهمة بنجاح",
+      "failedToApprove": "فشل الموافقة على المهمة",
+      "failedToReject": "فشل رفض المهمة",
+      "failedToAssign": "فشل إسناد المهمة",
+      "description": "وصف المهمة",
+      "assignTo": "إسناد إلى",
+      "dueDate": "تاريخ الاستحقاق",
+      "priority": "الأولوية",
+      "selectStaff": "اختر الموظف",
+      "assignTask": "إسناد المهمة",
+      "assigning": "جاري الإسناد...",
+      "descriptionRequired": "وصف المهمة مطلوب",
+      "staffRequired": "يرجى اختيار موظف",
+      "dueDateRequired": "تاريخ الاستحقاق مطلوب",
+      "dueDatePast": "تاريخ الاستحقاق لا يمكن أن يكون في الماضي",
+      "placeholder": "أدخل وصف المهمة...",
+      "all": "الكل",
+      "pending": "قيد الانتظار",
+      "submitted": "تم التسليم",
+      "inProgress": "قيد التنفيذ",
+      "low": "منخفضة",
+      "medium": "متوسطة",
+      "high": "عالية",
+      "urgent": "عاجلة"
     },
     "attendance": {
       "title": "إدارة الحضور",
