--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -53,7 +53,16 @@
     "waitlisted": "Waitlisted",
     "viewAll": "View All",
     "dashboard": "Dashboard",
-    "active": "Active"
+    "active": "Active",
+    "admin": "Admin",
+    "staff": "Staff",
+    "member": "Member",
+    "visitor": "Visitor",
+    "teacher": "Teacher",
+    "student": "Student",
+    "parent": "Parent",
+    "you": "You",
+    "saveChanges": "Save Changes"
   },
   "payment": {
     "selectMethod": "Select Payment Method",
@@ -1441,14 +1450,12 @@
     "title": "User Management",
     "manageUsers": "Manage Users",
     "manageUsersSubtitle": "Search, filter, and manage permissions of all registered users in the system.",
-    "searchUsers": "Search users...",
-    "filterByRole": "Filter by Role",
+    "searchPlaceholder": "Search by name, email, or username...",
     "allRoles": "All Roles",
-    "admin": "Admin",
-    "staff": "Staff",
-    "member": "Member",
-    "visitor": "Visitor",
     "editUser": "Edit User",
+    "editUserSubtitle": "Update user profile and permissions.",
+    "firstName": "First Name",
+    "lastName": "Last Name",
     "deleteUser": "Delete User",
     "updateRole": "Update Role",
     "userUpdated": "User updated successfully",
@@ -1518,7 +1525,35 @@
       "title": "Task Management",
       "manageAssignReview": "Manage, assign, and review staff tasks.",
       "viewUpdateTasks": "View and update your assigned tasks.",
-      "loadingTasks": "Loading tasks..."
+      "loadingTasks": "Loading tasks...",
+      "assignNewTask": "Assign New Task",
+      "newTask": "New Task",
+      "taskApproved": "Task approved",
+      "taskRejected": "Task rejected",
+      "taskAssigned": "Task assigned successfully",
+      "failedToApprove": "Failed to approve task",
+      "failedToReject": "Failed to reject task",
+      "failedToAssign": "Failed to assign task",
+      "description": "Task Description",
+      "assignTo": "Assign To",
+      "dueDate": "Due Date",
+      "priority": "Priority",
+      "selectStaff": "Select Staff",
+      "assignTask": "Assign Task",
+      "assigning": "Assigning...",
+      "descriptionRequired": "Task description is required",
+      "staffRequired": "Please select a staff member",
+      "dueDateRequired": "Due date is required",
+      "dueDatePast": "Due date cannot be in the past",
+      "placeholder": "Enter task description...",
+      "all": "All",
+      "pending": "Pending",
+      "submitted": "Submitted",
+      "inProgress": "In Progress",
+      "low": "Low",
+      "medium": "Medium",
+      "high": "High",
+      "urgent": "Urgent"
     },
     "attendance": {
       "title": "Attendance Management",
